Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2200

nested structs cause generate_fingerprint() to slow down at excessive CPU load

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.2
    • Compiler (General)
    • None
    • Patch Available

    Description

      The file http://pastebin.com/H5Uj74aW contains a number of nested structs definitions. These highly recursive structs (over 8 levels in this case) cause the get_fingerprint_material() method to loop over minutes.

      Thanks to Niclas who prepared the pastebin.

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: