THRIFT-2200: nested structs cause generate_fingerprint() to slow down at excessive CPU load

Patch: Jens Geyer