compiler/cpp/src/main.cc
@@ -958,8 +958,8 @@ void generate(t_program* program, const vector<string>& generator_strings) {
   try {
     pverbose("Program: %s\n", program->get_path().c_str());
 
-    // Compute fingerprints.
-    generate_all_fingerprints(program);
+    // Compute fingerprints. - not anymore, we do it on the fly now
+    //generate_all_fingerprints(program);
 
     if (dump_docs) {
       dump_docstrings(program);
